src/salesforce/objects/Duplicate_Match__c/Duplicate_Match__c.object-meta.xml
<CustomObject>
     <nameField>
         <displayFormat>DM-{0000}</displayFormat>
         <label>Name</label>
         <type>AutoNumber</type>
     </nameField>

     <fields>
         <fullName>Name</fullName>
         <displayFormat>DM-{0000}</displayFormat>
         <label>Name</label>
         <type>AutoNumber</type>
     </fields>

     <label>Duplicate Match</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>

    <pluralLabel>Duplicate Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>