src/salesforce/objects/Duplicate_Match__c/fields/Customer1__c.field-meta.xml
<CustomField>
    <fullName>Customer1__c</fullName>
    <label>Customer 1</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Duplicate Matches (Customer 1)</relationshipLabel>
    <relationshipName>Duplicate_Matches_Customer1</relationshipName>
     <required>true</required>
     <type>Lookup</type>
     <deleteConstraint>Restrict</deleteConstraint>
</CustomField>