src/salesforce/objects/Duplicate_Match__c/fields/Customer2__c.field-meta.xml
<CustomField>
    <fullName>Customer2__c</fullName>
    <label>Customer 2</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Duplicate Matches (Customer 2)</relationshipLabel>
    <relationshipName>Duplicate_Matches_Customer2</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>