src/salesforce/objects/Duplicate_Match__c/fields/Match_Score__c.field-meta.xml
<CustomField>
    <fullName>Match_Score__c</fullName>
    <label>Match Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>